# git-analytics

./: .gitignore  LICENSE  MANIFEST.in  README.md  collect_data.sh  data.json  gen_share_card.py  generate_report.py  git_analytics.py  pyproject.toml  report.html  run.py  run.sh  share-card.html
.github/workflows/: ci.yml
