[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "git-analytics"
version = "0.1.0"
description = "Local-first Git habit analytics report generator"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Git Analytics Contributors" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
git-analytics = "run:main"

[tool.setuptools]
py-modules = ["run", "git_analytics", "generate_report"]
